# commonui

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
commonui-examples/: Cargo.toml
commonui-examples/src/: advanced_canvas_example.rs  canvas_example.rs  main.rs
gui-core/: Cargo.toml
gui-core/src/: app.rs  element.rs  event.rs  lib.rs  media_query.rs  sizing.rs  widget.rs  widget_manager.rs  widget_state.rs
gui-core/src/widgets/: canvas.rs  container.rs  dropdown.rs  interactive.rs  layout.rs  mod.rs  property_inspector.rs  text.rs
gui-layout/: Cargo.toml
gui-layout/src/: invalidation.rs  layout_cache.rs  layout_patterns.rs  lib.rs  reactive_layout.rs
gui-reactive/: Cargo.toml
gui-reactive/src/: batch.rs  computed.rs  effect.rs  frame_sync.rs  lib.rs  runtime.rs  shutdown.rs  signal.rs  threading.rs  widget_registry.rs
gui-render/: Cargo.toml
gui-render/src/: batch.rs  lib.rs  primitives.rs  scene_cache.rs  vello_renderer.rs
src/: lib.rs
