[package]
name = "commonui-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gui-core = { path = "../gui-core" }
gui-reactive = { path = "../gui-reactive" }
tokio = { workspace = true }
vello = { workspace = true }